--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DPTC v8</title>
+    <title>DPTC v1.001</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -43,7 +43,6 @@
             font-size: 16px;
             font-weight: 600;
             fill: #ffffff;
-            text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
             pointer-events: none; /* Make text non-interactive */
         }
         /* Custom Range Input Styles */
@@ -189,7 +188,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <!-- Inputs -->
                         <div>
-                            <label for="tapDistance" class="block text-sm font-medium text-gray-700">Tap-to-Tap Distance (X)</label>
+                            <label for="tapDistance" class="block text-sm font-medium text-gray-700">Tap-to-Tap Distance (In Inches)</label>
                             <input type="text" id="tapDistance" value="100" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
                         </div>
                         <div>
@@ -235,7 +234,7 @@
                     <h3 class="text-xl font-semibold mb-4 border-b pb-2">Reverse Calculate Process SG</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div>
-                            <label for="revTapDistance" class="block text-sm font-medium text-gray-700">Tap-to-Tap Distance (X)</label>
+                            <label for="revTapDistance" class="block text-sm font-medium text-gray-700">Tap-to-Tap Distance (In Inches)</label>
                             <input type="text" id="revTapDistance" value="100" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
                         </div>
                         <div class="flex flex-col p-4 bg-gray-50 rounded-lg border md:col-span-2">
@@ -282,6 +281,12 @@
                 <div class="bg-white p-6 rounded-xl shadow-lg flex items-center justify-center">
                     <svg id="vessel-svg" viewBox="0 0 300 400" overflow="visible" class="w-full h-auto max-w-sm">
                         <!-- Vessel Body -->
+                        <defs>
+                            <marker id="arrow" markerWidth="6" markerHeight="6" refX="3" refY="3" markerUnits="strokeWidth" orient="auto-start-reverse">
+                                <path d="M0,0 L6,3 L0,6 Z" fill="#4b5563"></path>
+                            </marker>
+                        </defs>
+
                         <path d="M50,50 Q50,20 80,20 H220 Q250,20 250,50 V350 Q250,380 220,380 H80 Q50,380 50,350 Z" fill="#e5e7eb" stroke="#9ca3af" stroke-width="2" />
 
                         <!-- Liquid Representations -->
@@ -293,12 +298,14 @@
                         <text id="interfaceLiquidLabel" x="150" y="287.5" text-anchor="middle" class="svg-text">S2 (Heavy)</text>
 
                         <!-- Taps and Dimensions -->
-                        <line x1="50" y1="350" x2="30" y2="350" stroke="#9ca3af" stroke-width="3" />
-                        <text x="25" y="355" writing-mode="tb-rl" glyph-orientation-vertical="0" class="svg-text" style="fill: #374151; font-size:14px; font-weight:500;" text-anchor="middle">Bottom</text>
-                        <line x1="50" y1="100" x2="30" y2="100" stroke="#9ca3af" stroke-width="3" />
-                        <text x="25" y="105" writing-mode="tb-rl" glyph-orientation-vertical="0" class="svg-text" style="fill: #374151; font-size:14px; font-weight:500;" text-anchor="middle">Top</text>
-                        <line x1="265" y1="100" x2="265" y2="350" stroke="#4b5563" stroke-width="1.5" stroke-dasharray="4" />
-                        <text id="x-label" x="270" y="225" class="svg-text" style="fill: #374151; font-size:14px; font-weight:500;">X</text>
+                        <line x1="50" y1="350" x2="40" y2="350" stroke="#9ca3af" stroke-width="3" />
+                        <text text-anchor="middle" style="fill: #374151; font-size:14px; font-weight:500;" class="svg-text" y="350" x="37" writing-mode="sideways-lr" glyph-orientation-vertical="0">Bottom</text>
+                        <line x1="50" y1="100" x2="40" y2="100" stroke="#9ca3af" stroke-width="3" />
+                        <text text-anchor="middle" style="fill: #374151; font-size:14px; font-weight:500;" class="svg-text" y="100" x="37" writing-mode="sideways-lr" glyph-orientation-vertical="0">Top</text>
+                        <text id="x-label" x="258" y="225" text-anchor="middle" class="svg-text" style="fill: #374151; font-size:14px; font-weight:500;" writing-mode="tb-rl" glyph-orientation-vertical="0">X</text>
+                        <line x1="258" y1="105" x2="258" y2="214" stroke="#4b5563" stroke-width="1.5" stroke-dasharray="4" marker-start="url(#arrow)"></line>
+                        <line x1="258" y1="234" x2="258" y2="345" stroke="#4b5563" stroke-width="1.5" stroke-dasharray="4" marker-end="url(#arrow)"></line>
+                        <text id="tagNameLabel" x="150" y="10" text-anchor="middle" class="svg-text" style="fill: #374151; font-size:14px; font-weight:500;">Tag:</text>
                     </svg>
                 </div>
                 <!-- Flow Signal Calculator -->
@@ -398,6 +405,7 @@
 
             // Common elements
             const xLabel = document.getElementById('x-label');
+            const tagNameLabel = document.getElementById('tagNameLabel');
             const sqrtToggle = document.getElementById('sqrtToggle');
             const maSlider = document.getElementById('maSlider');
             const maInput = document.getElementById('maInput');
@@ -511,6 +519,7 @@
                 const isHighSideTop = pressureSideToggle.checked;
                 const isInterface = levelTypeToggle.checked;
                 const X = parseFloat(tapDistanceInput.value) || 0;
+                const tagNameFR = tagNumber.value;
                 const S1_light = parseFloat(processSgInput.value) || 0;
                 const S2_heavy = isInterface ? (parseFloat(interfaceSgInput.value) || 0) : S1_light;
                 const S3_seal = parseFloat(sealLiquidSgInput.value) || 0;
@@ -546,7 +555,9 @@
                 urvResultEl.textContent = urv.toFixed(2);
                 spanResultEl.textContent = Math.abs(span).toFixed(2);
 
-                xLabel.textContent = `X = ${X || 0}`;
+                xLabel.textContent = `${X || 0}"`;
+                tagNameLabel.textContent = tagNameFR;
+                
             }
 
             function calculateProcessSg() {
