--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DPTC v1.001</title>
+    <title>DPTC v1.002</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -297,14 +297,47 @@
                         <text id="processLiquidLabel" x="150" y="225" text-anchor="middle" class="svg-text">S1</text>
                         <text id="interfaceLiquidLabel" x="150" y="287.5" text-anchor="middle" class="svg-text">S2 (Heavy)</text>
 
+                        <!-- Random Bullshit -->
+                        <svg id="diagram" viewBox="46 -247 400 200" overflow="visible" width="400" height="200">
+
+                            <!-- ① the part that appears/disappears when installationToggle is ON -->
+                            <g id="install-group">
+                                <!-- circle with “LT” -->
+                                <circle cx="52" cy="80" r="8" fill="#fff" stroke="#000"></circle>
+                                <text x="52" y="84" text-anchor="middle" font-size="10">LT</text>
+
+                                <!-- line down into the split rectangle -->
+                                <line x1="50" y1="89" x2="50" y2="89" stroke="#000"></line>
+
+                                <!-- split rectangle with L&nbsp;|&nbsp;H -->
+                                <g id="level-rect">
+                                    <rect x="40" y="97" width="24" height="12" fill="#eee" stroke="#000"></rect>
+                                    <line x1="52" y1="89" x2="52" y2="109" stroke="#000"></line>
+                                    <text id="left-char" x="46" y="107" text-anchor="middle" font-size="10">L</text>
+                                    <text id="right-char" x="58" y="107" text-anchor="middle" font-size="10">H</text>
+                                </g>
+                            </g>
+
+                            <!-- ② the part that always shows (triangle + line) -->
+                            <g id="triangle-group" transform="translate(0,0)">
+                                <!-- solid line from rectangle to triangle -->
+                                <line x1="65" y1="103" x2="71" y2="103" stroke="#000"></line>
+                                <!-- sideways triangle -->
+                                <polygon points="72,95 82,102 72,109" fill="#fff" stroke="#000"></polygon>
+                                <!-- line out the right side -->
+                                <line x1="92" y1="103" x2="95" y2="103" stroke="#000"></line>
+                                <polygon points="92,95 82,102 92,109" fill="#fff" stroke="#000"></polygon>
+                            </g>
+                        </svg>
+
                         <!-- Taps and Dimensions -->
                         <line x1="50" y1="350" x2="40" y2="350" stroke="#9ca3af" stroke-width="3" />
                         <text text-anchor="middle" style="fill: #374151; font-size:14px; font-weight:500;" class="svg-text" y="350" x="37" writing-mode="sideways-lr" glyph-orientation-vertical="0">Bottom</text>
                         <line x1="50" y1="100" x2="40" y2="100" stroke="#9ca3af" stroke-width="3" />
                         <text text-anchor="middle" style="fill: #374151; font-size:14px; font-weight:500;" class="svg-text" y="100" x="37" writing-mode="sideways-lr" glyph-orientation-vertical="0">Top</text>
                         <text id="x-label" x="258" y="225" text-anchor="middle" class="svg-text" style="fill: #374151; font-size:14px; font-weight:500;" writing-mode="tb-rl" glyph-orientation-vertical="0">X</text>
-                        <line x1="258" y1="105" x2="258" y2="214" stroke="#4b5563" stroke-width="1.5" stroke-dasharray="4" marker-start="url(#arrow)"></line>
-                        <line x1="258" y1="234" x2="258" y2="345" stroke="#4b5563" stroke-width="1.5" stroke-dasharray="4" marker-end="url(#arrow)"></line>
+                        <line x1="258" y1="105" x2="258" y2="210" stroke="#4b5563" stroke-width="1.5" stroke-dasharray="4" marker-start="url(#arrow)"></line>
+                        <line x1="258" y1="240" x2="258" y2="345" stroke="#4b5563" stroke-width="1.5" stroke-dasharray="4" marker-end="url(#arrow)"></line>
                         <text id="tagNameLabel" x="150" y="10" text-anchor="middle" class="svg-text" style="fill: #374151; font-size:14px; font-weight:500;">Tag:</text>
                     </svg>
                 </div>
@@ -406,6 +439,8 @@
             // Common elements
             const xLabel = document.getElementById('x-label');
             const tagNameLabel = document.getElementById('tagNameLabel');
+            const rightChar = document.getElementById('right-char');
+            const leftChar = document.getElementById('left-char');
             const sqrtToggle = document.getElementById('sqrtToggle');
             const maSlider = document.getElementById('maSlider');
             const maInput = document.getElementById('maInput');
@@ -555,8 +590,17 @@
                 urvResultEl.textContent = urv.toFixed(2);
                 spanResultEl.textContent = Math.abs(span).toFixed(2);
 
+
+                if (pressureSideToggle.checked) {
+                    rightChar.textContent = "H";
+                    leftChar.textContent = "L";
+                } else {
+                    rightChar.textContent = "L";
+                    leftChar.textContent = "H";
+                }
+
                 xLabel.textContent = `${X || 0}"`;
-                tagNameLabel.textContent = tagNameFR;
+                tagNameLabel.textContent = `Tag: tagNameFR`;
                 
             }
 
@@ -566,13 +610,16 @@
                 const X = parseFloat(revTapDistanceInput.value) || 0;
                 const lrv = parseFloat(asFoundLrvInput.value) || 0;
                 const urv = parseFloat(asFoundUrvInput.value) || 0;
-
+                const tagNameFR = tagNumber.value;
                 const span = urv - lrv;
 
                 if (X === 0) {
                     reverseSgResultEl.textContent = "Error: X=0";
                     return;
                 }
+
+                xLabel.textContent = `${X || 0}"`;
+                tagNameLabel.textContent = `Tag: tagNameFR`;
 
                 const calculatedSg = Math.abs(span) / X;
                 reverseSgResultEl.textContent = calculatedSg.toFixed(3);
