--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
         <!-- Footer -->
         <footer class="text-center py-8">
             <p class="text-sm text-gray-500">Created by Wade Oliver</p>
-            <p class="text-sm text-gray-500">(v1.006)</p>
+            <p class="text-sm text-gray-500">(v1.007)</p>
         </footer>
     </div>
 
@@ -449,7 +449,7 @@
             const rightChar = document.getElementById('right-char');
             const leftChar = document.getElementById('left-char');
             const installGroup = document.getElementById('install-group');
-            const lineDissapear = document.getElementById('line-dissapear
+            const lineDissapear = document.getElementById('line-dissapear');
             const lineDissapear2 = document.getElementById('line-dissapear2');
             const lineDissapear3 = document.getElementById('line-dissapear3');
             const lineDissapear4 = document.getElementById('line-dissapear4');
